syntax = "proto3";
package ProtoMessage;
option java_package = "org.mmo.message";
option go_package = "/message";

//服务器内部消息

//服务器列表 （测试）
message ServerListRequest {
    int32 type                      = 1; //服务器类型
}
//服务器列表 （测试）
message ServerListResponse {
    repeated ServerInfo server      = 1; // 服务器列表
}

// 服务器信息
message ServerInfo {
    int32 id                        = 1; // 服务器ID
    string ip                       = 2; // 内网地址
    int32 type                      = 3; // 类型
    int32 state                     = 4; // 状态 -1表示维护；0表示准备开启；1表示正常，2表示不显示，3表示内部开启
}

// 注册更新服务器
message ServerRegisterUpdateRequest {
    ServerInfo serverInfo           = 1;
}

//rpc  （测试）
service ServerService {
    //服务器注册
    rpc ServerRegister (ServerInfo) returns (ServerInfo);
    //服务器更新
    rpc ServerUpdate (ServerInfo) returns (ServerInfo);

}
